--- a/style.css
+++ b/style.css
@@ -76,11 +76,7 @@ FLOAT
 /*==============================================================================
 CELL
 */
-.cll
-{
-  width:48px;
-  height:48px;
-}
+.cll{width:48px; height:48px}
 
 /*==============================================================================
 COLORS
@@ -179,6 +175,16 @@ BOX
 */
 .box{height:70px}
 
+/*==============================================================================
+PLAYER
+*/
+.pla
+{
+  width:32px;
+  height:32px;
+  background-color:var(--c17);
+}
+
 /*////////////////////////////////////////////////////////////////////////////// SPECIFICS
 */
 body
@@ -208,4 +214,8 @@ body
 
 /*==============================================================================
 */
-#center{transform:translate(462px,270px)}
+#center
+{
+  background-color:rgba(0,0,0,0)
+  transform:translate(462px,270px);
+}
