--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ BORDERS
   box-sizing:border-box;
 }
 
-/*..............................................................................
+/*------------------------------------------------------------------------------
 A, B, K and L (n=none; s=solid; d=dashed)
 */
 .ssns{border-bottom-width:0}
@@ -110,7 +110,7 @@ A, B, K and L (n=none; s=solid; d=dashed)
 .ndss{border-top-width:0; border-right-style:dashed}
 .nssd{border-top-width:0; border-left-style:dashed}
 
-/*..............................................................................
+/*------------------------------------------------------------------------------
 C
 */
 .snns{border-width:1px 0 0 1px}
@@ -121,7 +121,7 @@ C
 .snnd{border-width:1px 0 0 1px; border-left-style:dashed}
 .sssn{border-left-width:0}
 
-/*..............................................................................
+/*------------------------------------------------------------------------------
 D
 */
 .nnns{border-width:0 0 0 1px}
@@ -131,13 +131,13 @@ D
 .nsnn{border-width:0 1px 0 0}
 .nssn{border-width:0 1px 1px 0}
 
-/*..............................................................................
+/*------------------------------------------------------------------------------
 E
 */
 .ndns{border-width:0 1px 0 1px; border-right-style:dashed}
 .nsnd{border-width:0 1px 0 1px; border-left-style:dashed}
 
-/*..............................................................................
+/*------------------------------------------------------------------------------
 J
 */
 .nnsn{border-width:0 0 1px 0}
@@ -168,7 +168,7 @@ ROUND
 /*==============================================================================
 SPACE
 */
-.spc{height:1%}
+.spc{height:7px}
 
 /*==============================================================================
 BOX
@@ -176,9 +176,9 @@ BOX
 .box{height:70px}
 
 /*==============================================================================
-PLAYER
+ATHLETE
 */
-.pla
+.atl
 {
   width:32px;
   height:32px;
@@ -216,6 +216,6 @@ body
 */
 #center
 {
-  background-color:rgba(0,0,0,0)
+  background-color:rgba(0,0,0,0);
   transform:translate(462px,270px);
 }
