--- a/style.css
+++ b/style.css
@@ -90,10 +90,8 @@ ZONE
   width:42px;
   height:42px;
   box-sizing: border-box;
-  border: 2px dashed rgba(239,239,239,0.75);
+  border: 2px dashed var(--c16);
 }
-
-.zon:hover{border: 2px dashed rgba(255,255,255,1)}
 
 /*==============================================================================
 MASK
