--- a/style.css
+++ b/style.css
@@ -270,3 +270,7 @@ body
 */
 #golGre1{transform:translate(-1px,-1px)}
 #golBlu1{transform:translate(0,-1px)}
+
+/*==============================================================================
+*/
+#selected{border: 4px solid rgba(255,255,255,0.5)}
