--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ BORDERS
   box-sizing:border-box;
 }
 
-/*------------------------------------------------------------------------------
+/*..............................................................................
 A, B, K and L (n=none; s=solid; d=dashed)
 */
 .ssns{border-bottom-width:0}
@@ -140,7 +140,7 @@ A, B, K and L (n=none; s=solid; d=dashed)
 .ndss{border-top-width:0; border-right-style:dashed}
 .nssd{border-top-width:0; border-left-style:dashed}
 
-/*------------------------------------------------------------------------------
+/*..............................................................................
 C
 */
 .snns{border-width:1px 0 0 1px}
@@ -151,7 +151,7 @@ C
 .snnd{border-width:1px 0 0 1px; border-left-style:dashed}
 .sssn{border-left-width:0}
 
-/*------------------------------------------------------------------------------
+/*..............................................................................
 D
 */
 .nnns{border-width:0 0 0 1px}
@@ -161,13 +161,13 @@ D
 .nsnn{border-width:0 1px 0 0}
 .nssn{border-width:0 1px 1px 0}
 
-/*------------------------------------------------------------------------------
+/*..............................................................................
 E
 */
 .ndns{border-width:0 1px 0 1px; border-right-style:dashed}
 .nsnd{border-width:0 1px 0 1px; border-left-style:dashed}
 
-/*------------------------------------------------------------------------------
+/*..............................................................................
 J
 */
 .nnsn{border-width:0 0 1px 0}
@@ -276,11 +276,13 @@ body
 #selected
 {
   border:4px solid rgba(255,255,255,0.5);
-  animation-name: bob;
+  animation-name: ripple;
   animation-duration: 0.25s;
 }
 
-@keyframes bob
+/*..............................................................................
+*/
+@keyframes ripple
 {
   0%  {border:4px solid rgba(255,255,255,0.5)}
   50% {border:8px solid rgba(255,255,255,0.5)}
