--- a/style.css
+++ b/style.css
@@ -68,10 +68,13 @@ DISPLAY or BUTTON
 .btn:hover{background-color:var(--c10); color:var(--c15)}
 
 /*==============================================================================
-GREEN or BLUE
+RED or GREEN or BLUE
 */
-.grn{      background-color:var(--c19)}
-.grn:hover{background-color:var(--c20)}
+.red{      background-color:var(--c17)}
+.red:hover{background-color:var(--c18)}
+
+.gre{      background-color:var(--c19)}
+.gre:hover{background-color:var(--c20)}
 
 .blu{      background-color:var(--c21)}
 .blu:hover{background-color:var(--c22)}
