--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
   */
 }
 
-/*////////////////////////////////////////////////////////////////////////////// GENERAL
+/*////////////////////////////////////////////////////////////////////////////// CLASSES
 */
 .w00{width:0}  .w05{width:5%} .w10{width:10%}.w15{width:15%}.w20{width:20%}
 .w25{width:25%}.w30{width:30%}.w35{width:35%}.w40{width:40%}.w45{width:45%}
@@ -234,7 +234,7 @@ SPECIAL CASE 1
 */
 .sc1{transform:translate(-1px,0)}
 
-/*////////////////////////////////////////////////////////////////////////////// SPECIFICS
+/*////////////////////////////////////////////////////////////////////////////// IDS
 */
 body
 {
@@ -276,7 +276,7 @@ body
 
 /*==============================================================================
 */
-#selected
+#selection
 {
   border:4px solid rgba(255,255,255,0.5);
   animation-name: ripple;
