--- a/style.css
+++ b/style.css
@@ -60,10 +60,13 @@ CENTER
 }
 
 /*==============================================================================
-DISPLAY or BUTTON
+DISPLAY
 */
-.dsp{      background-color:var(--c04); color:var(--c10)}
+.dsp{background-color:var(--c04); color:var(--c10)}
 
+/*==============================================================================
+BUTTON
+*/
 .btn{      background-color:var(--c09); color:var(--c14)}
 .btn:hover{background-color:var(--c10); color:var(--c15)}
 
