--- a/style.css
+++ b/style.css
@@ -219,6 +219,15 @@ SPECIAL CASE 1
 */
 .sc1{transform:translate(-1px,0)}
 
+/*==============================================================================
+*/
+.ani2
+{
+  transition:
+    border-color 0.25s linear,
+    box-shadow 0.5s linear;
+}
+
 /*////////////////////////////////////////////////////////////////////////////// IDS
 */
 body
