--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ ZONE
   height:42px;
   box-sizing:border-box;
   border:2px dashed var(--c16);
+  z-index:2;
 }
 
 /*==============================================================================
@@ -296,6 +297,7 @@ body
   border:4px solid rgba(255,255,255,0.5);
   animation-name:ripple;
   animation-duration:0.25s;
+  z-index:4;
 }
 
 /*..............................................................................
