--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-/*////////////////////////////////////////////////////////////////////////////// VARIABLES
+/*//////////////////////////////////////////////////////////////////////////////
 */
 :root
 {
@@ -32,7 +32,7 @@
   */
 }
 
-/*////////////////////////////////////////////////////////////////////////////// CLASSES
+/*//////////////////////////////////////////////////////////////////////////////
 */
 .w00{width:0}  .w05{width:5%} .w10{width:10%}.w15{width:15%}.w20{width:20%}
 .w25{width:25%}.w30{width:30%}.w35{width:35%}.w40{width:40%}.w45{width:45%}
@@ -250,7 +250,7 @@ SPECIAL CASE 1
     box-shadow 0.5s linear;
 }
 
-/*////////////////////////////////////////////////////////////////////////////// IDS
+/*//////////////////////////////////////////////////////////////////////////////
 */
 body
 {
