--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@
 body
 {
   background-color: var(--c04);
-  color:            rgba(255,255,255,0.25);
   font-family:      sans-serif;
   font-size:        12px;
   cursor:           default;
@@ -112,6 +111,16 @@ ZONE
 }
 
 /*==============================================================================
+ROUNDED (42 pixels)
+*/
+.r42
+{
+  width:      42px;
+  height:     42px;
+  box-sizing: border-box;
+}
+
+/*==============================================================================
 MASK
 */
 .msk{overflow: auto}
@@ -128,6 +137,7 @@ CELL
 {
   width:  48px;
   height: 48px;
+  color:  rgba(255,255,255,0.25);
 }
 
 /*==============================================================================
@@ -204,7 +214,7 @@ GOAL
   width:            32px;
   height:           32px;
   border:           2px solid rgb(239,239,239);
-  background-color: rgba(255,255,255,0.25)
+  background-color: rgba(255,255,255,0.25);
 }
 
 /*==============================================================================
@@ -296,6 +306,16 @@ SPECIAL CASE 1
 {
   border:             4px solid rgba(255,255,255,0.5);
   animation-name:     ripple;
+  animation-duration: 0.25s;
+  z-index:            6;
+}
+
+/*==============================================================================
+*/
+#shoot
+{
+  border:             4px solid rgb(255,255,255);
+  animation-name:     poop;
   animation-duration: 0.25s;
   z-index:            6;
 }
