The SHOOT is beginning to show
a . Nothing much under INDEX.html, STYLE.css nor uData.js
b . A not so necessary (but useful) double calling of ‘shoot0’ in
tPAGE.js
c . vTOOL.js used presets from glow, but will change a lot later on
d . zMAIN.js showed a bug sooner, it returned ‘dif’ as undefined data
e . I inputed line 566 (new) with that in mind, but that might turn out
not to be the answer to a problem I didn’t spent so much time figuring
out
f . wCLIC.js was bugging because of the stacked  processes waiting to
be executed after the TRIGGER events (under vTOOL.js), but no more

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body
   -ms-user-select:       none;/* Internet Explorer/Edge */
 }
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
 CENTER
 */
 .cnt
@@ -252,12 +252,12 @@ STANDARD SIZE
   box-sizing: border-box;
 }
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
 SPECIAL CASES
 */
 .sc1{transform: translate(-1px,0)}
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
 ANIMATIONS
 */
 .ani1{} /* code exclusive */
@@ -269,21 +269,22 @@ ANIMATIONS
     box-shadow 0.5s linear;
 }
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
 SHOOT
 */
 .sho
 {
   border:     2px solid rgb(255,255,255);
   box-sizing: border-box;
+  z-index:    7;
 }
 
-.sh0{width: 42px; height: 42px}
-.sh1{width: 32px; height: 32px}
-.sh2{width: 22px; height: 22px}
-.sh3{width: 12px; height: 12px}
+.sh0{width: 44px; height: 44px}
+.sh1{width: 34px; height: 34px}
+.sh2{width: 24px; height: 24px}
+.sh3{width: 14px; height: 14px}
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
 */
 #arena
 {
