--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@
 body
 {
   background-color: var(--c04);
-  color:            rgba(255,255,255,0.25);
   font-family:      sans-serif;
   font-size:        12px;
   cursor:           default;
@@ -64,7 +63,7 @@ body
   -ms-user-select:       none;/* Internet Explorer/Edge */
 }
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
 CENTER
 */
 .cnt
@@ -128,6 +127,7 @@ CELL
 {
   width:  48px;
   height: 48px;
+  color:  rgba(255,255,255,0.25);
 }
 
 /*==============================================================================
@@ -204,7 +204,7 @@ GOAL
   width:            32px;
   height:           32px;
   border:           2px solid rgb(239,239,239);
-  background-color: rgba(255,255,255,0.25)
+  background-color: rgba(255,255,255,0.25);
 }
 
 /*==============================================================================
@@ -252,13 +252,16 @@ STANDARD SIZE
   box-sizing: border-box;
 }
 
-/*==============================================================================
-SPECIAL CASE 1
+/*//////////////////////////////////////////////////////////////////////////////
+SPECIAL CASES
 */
 .sc1{transform: translate(-1px,0)}
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
+ANIMATIONS
 */
+.ani1{} /* code exclusive */
+
 .ani2
 {
   transition:
@@ -266,7 +269,22 @@ SPECIAL CASE 1
     box-shadow 0.5s linear;
 }
 
-/*==============================================================================
+/*//////////////////////////////////////////////////////////////////////////////
+SHOOT
+*/
+.sho
+{
+  border:     2px solid rgb(255,255,255);
+  box-sizing: border-box;
+  z-index:    7;
+}
+
+.sh0{width: 44px; height: 44px}
+.sh1{width: 34px; height: 34px}
+.sh2{width: 24px; height: 24px}
+.sh3{width: 14px; height: 14px}
+
+/*//////////////////////////////////////////////////////////////////////////////
 */
 #arena
 {
