--- a/style.css
+++ b/style.css
@@ -317,11 +317,52 @@ SHOOT
   z-index:            6;
 }
 
-/*..............................................................................
-*/
 @keyframes ripple
 {
   0%  {border: 4px solid rgba(255,255,255,0.5)}
   50% {border: 8px solid rgba(255,255,255,0.5)}
   100%{border: 2px solid rgba(255,255,255,0.5)}
+}
+
+/*==============================================================================
+*/
+#shoot0{animation: shineA 0.75s infinite}
+#shoot1{animation: shineB 0.75s infinite}
+#shoot2{animation: shineC 0.75s infinite}
+#shoot3{animation: shineD 0.75s infinite}
+
+@keyframes shineA
+{
+  9%  {border-color: rgba(255,255,255,0.3); border-width: 2px}
+  79% {border-color: rgba(255,255,255,0.4); border-width: 3px}
+  89% {border-color: rgba(255,255,255,0.5); border-width: 5px}
+  99% {border-color: rgba(255,255,255,0.9); border-width: 6px}
+  100%{border-color: rgba(255,255,255,0.6); border-width: 2px}
+}
+
+@keyframes shineB
+{
+  6%  {border-color: rgba(255,255,255,0.3); border-width: 2px}
+  76% {border-color: rgba(255,255,255,0.4); border-width: 3px}
+  86% {border-color: rgba(255,255,255,0.5); border-width: 5px}
+  96% {border-color: rgba(255,255,255,0.9); border-width: 6px}
+  100%{border-color: rgba(255,255,255,0.6); border-width: 2px}
+}
+
+@keyframes shineC
+{
+  3%  {border-color: rgba(255,255,255,0.3); border-width: 2px}
+  73% {border-color: rgba(255,255,255,0.4); border-width: 3px}
+  83% {border-color: rgba(255,255,255,0.5); border-width: 5px}
+  93% {border-color: rgba(255,255,255,0.9); border-width: 6px}
+  100%{border-color: rgba(255,255,255,0.6); border-width: 2px}
+}
+
+@keyframes shineD
+{
+  0%  {border-color: rgba(255,255,255,0.3); border-width: 2px}
+  70% {border-color: rgba(255,255,255,0.4); border-width: 3px}
+  80% {border-color: rgba(255,255,255,0.5); border-width: 5px}
+  90% {border-color: rgba(255,255,255,0.9); border-width: 6px}
+  100%{border-color: rgba(255,255,255,0.6); border-width: 2px}
 }
