ENH: Ball general appearance

--- a/style.css
+++ b/style.css
@@ -285,6 +285,10 @@ SHOOT
 
 /*//////////////////////////////////////////////////////////////////////////////
 */
+#ball{opacity:0.66}
+
+/*//////////////////////////////////////////////////////////////////////////////
+*/
 #arena
 {
   width:            962px;
