ENH: May now shoot goals + minor fixes

--- a/style.css
+++ b/style.css
@@ -252,19 +252,7 @@ STANDARD SIZE
   box-sizing: border-box;
 }
 
-/*//////////////////////////////////////////////////////////////////////////////
-ANIMATIONS
-*/
-.ani1{} /* code exclusive */
-
-.ani2
-{
-  transition:
-    border-color 0.25s linear,
-    box-shadow 0.5s linear;
-}
-
-/*//////////////////////////////////////////////////////////////////////////////
+/*==============================================================================
 SHOOT
 */
 .sho
@@ -278,11 +266,30 @@ SHOOT
 .sh2{width: 24px; height: 24px}
 .sh3{width: 14px; height: 14px}
 
+/*==============================================================================
+EXCEPTIONS
+*/
+.exc1{padding: 1px 0 0 1px}
+.exc2{padding: 1px 0 0 0}
+.exc3{padding: 0 0 0 1px}
+
+/*//////////////////////////////////////////////////////////////////////////////
+ANIMATIONS
+*/
+.ani1{} /* code exclusive */
+
+.ani2
+{
+  transition:
+    border-color 0.25s linear,
+    box-shadow 0.5s linear;
+}
+
 /*//////////////////////////////////////////////////////////////////////////////
 */
 #ball{opacity:0.66}
 
-/*//////////////////////////////////////////////////////////////////////////////
+/*==============================================================================
 */
 #arena
 {
