--- a/style.css
+++ b/style.css
@@ -377,19 +377,20 @@ ANIMATIONS
 /*==============================================================================
 THREAT
 */
-.tht
+.thr
 {
   box-sizing: border-box;
   border-style: dashed;
-  animation: threat 1s infinite;
+  animation: threat 2s infinite;
 }
 
 @keyframes threat
 {
-  0%  {border-width: 11px; border-radius: 66%; border-color: rgb(255,255,255)}
-  10% {border-width: 8px; border-radius: 33%; border-color: rgb(180,70,100)}
-  20% {border-width: 6px; border-radius: 0; border-color: rgb(160,10,40)}
-  80% {border-width: 6px; border-radius: 0; border-color: rgb(160,10,40)}
-  90% {border-width: 8px; border-radius: 33%; border-color: rgb(180,70,100)}
-  100%{border-width: 10px; border-radius: 66%; border-color: rgb(255,255,255)}
+0%  {border-width:10px;border-radius:0;border-color:rgb(160,10,40)}
+90% {border-width:10px;border-radius:0;border-color:rgb(160,10,40)}
+92% {border-width:9px;border-radius:33%;border-color:rgb(206,133,148);opacity:1}
+94% {border-width:7px;border-radius:66%;border-color:rgb(255,255,255);opacity:0}
+96% {border-width:7px;border-radius:66%;border-color:rgb(255,255,255);opacity:0}
+98% {border-width:9px;border-radius:33%;border-color:rgb(206,133,148);opacity:1}
+100%{border-width:10px;border-radius:0;border-color:rgb(160,10,40)}
 }
