--- a/style.css
+++ b/style.css
@@ -386,11 +386,11 @@ THREAT
 
 @keyframes threat
 {
-0%  {border-width:10px;border-radius:0;border-color:rgb(160,10,40)}
-90% {border-width:10px;border-radius:0;border-color:rgb(160,10,40)}
-92% {border-width:9px;border-radius:33%;border-color:rgb(206,133,148)}
-94% {border-width:7px;border-radius:66%;border-color:rgb(255,255,255)}
-96% {border-width:7px;border-radius:66%;border-color:rgb(255,255,255);opacity:1}
-98% {border-width:9px;border-radius:33%;border-color:rgb(206,133,148);opacity:0}
-100%{border-width:10px;border-radius:0;border-color:rgb(160,10,40)}
+  0%  {border-width: 10px; border-radius: 0; border-color: #A00A28}
+  90% {border-width: 10px; border-radius: 0; border-color: #A00A28}
+  92% {border-width: 9px; border-radius: 33%; border-color: #CE8594}
+  94% {border-width: 7px; border-radius: 66%; border-color: #FFFFFF}
+  96% {border-width: 7px; border-radius: 66%; border-color: #FFFFFF; opacity: 1}
+  98% {border-width: 9px; border-radius: 33%; border-color: #CE8594; opacity: 0}
+  100%{border-width: 10px; border-radius: 0; border-color: #A00A28}
 }
