--- a/style.css
+++ b/style.css
@@ -6,41 +6,52 @@ html, body
   margin:0;
   width:100%;
   height:100%;
-  background-color:#303030;
+  background-color:rgb(48,48,48);
 }
 
 /*..............................................................................
 */
-#arena{ width:960px; height:692px; background-color:#FFFFFF }
+#arena{ width:960px; height:692px; background-color:rgb(255,255,255) }
 #clock{ width:240px; height:48px }
 #ball{ background-color:rgba(127,127,127,0.75) }
 #center{ transform:translate(456px,263px); border-style:dashed }
+#console{ height:48px; width:50% }
+#reset{ height:48px }
 
 /*..............................................................................
 */
 .cll{ color:rgba(255,255,255,0.25); font-family:sans-serif; font-size:14px }
 .cnt{ display:flex; align-items:center; justify-content:center }
+.gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
 
-.rnd{ border-radius:50% }
+.fml{ font-family:sans-serif }
 .box{ box-sizing:border-box }
 .abs{ position:absolute }
 .flt{ float:left }
 
-.bd1{ border:1px solid #FFFFFF }
-.bd2{ border:2px solid #FFFFFF }
+.rn1{ border-radius:5px; font-size:15px; color:rgb(207,207,207) }
+.rn2{ border-radius:50% }
+
+.bd1{ border:1px solid rgb(255,255,255) }
+.bd2{ border:2px solid rgb(255,255,255) }
+
+.dsp{ background-color:rgb(63,63,63) }
+.btn{ background-color:rgb(127,127,127) }
+.btn:hover{ background-color:rgb(143,143,143); color:rgb(223,223,223) }
 
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
+.yon{ width:5%; height:48px }
 
-.trn{ background-color:#E0E0E0 } /* turn */
-.bnc{ background-color:#D0D0D0 } /* bench */
+.trn{ background-color:rgb(223,223,223) } /* turn */
+.bnc{ background-color:rgb(207,207,207) } /* bench */
 
-.lrd{ background-color:#D01030 } /* light red */
-.drd{ background-color:#C00020 } /* dark red */
-.lgr{ background-color:#70A010 } /* light gree n*/
-.dgr{ background-color:#609000 } /* dark green */
-.lbl{ background-color:#6020A0 } /* light blue */
-.dbl{ background-color:#501090 } /* dark blue */
+.lrd{ background-color:rgb(207,15,47) } /* light red */
+.drd{ background-color:rgb(191,0,31) } /* dark red */
+.lgr{ background-color:rgb(111,159,15) } /* light green */
+.dgr{ background-color:rgb(95,143,0) } /* dark green */
+.lbl{ background-color:rgb(95,31,159) } /* light blue */
+.dbl{ background-color:rgb(79,15,143) } /* dark blue */
 
 /*..............................................................................
 */
