--- a/style.css
+++ b/style.css
@@ -1,28 +1,37 @@
 
-/*..............................................................................
-*/
 html, body
 {
   margin:0;
   width:100%;
   height:100%;
   background-color:rgb(48,48,48);
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  cursor:default;
 }
 
-/*..............................................................................
+/*//////////////////////////////////////////////////////////////////////////////
 */
 #arena{ width:960px; height:692px; background-color:rgb(255,255,255) }
 #clock{ width:240px; height:48px }
 #ball{ background-color:rgba(127,127,127,0.75) }
-#center{ transform:translate(456px,263px); border-style:dashed }
-#console{ height:48px; width:50% }
-#reset{ height:48px }
+#console{ width:50%; height:48px }
+#reset{ width:25%; height:48px }
+#center
+{
+  transform:translate(461px,268px);
+  border-style:dashed;
+  width:38px;
+  height:38px;
+}
 
-/*..............................................................................
+/*//////////////////////////////////////////////////////////////////////////////
 */
 .cll{ color:rgba(255,255,255,0.25); font-family:sans-serif; font-size:14px }
 .cnt{ display:flex; align-items:center; justify-content:center }
 .gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
+.yon{ width:5%; height:48px; display:none }
 
 .fml{ font-family:sans-serif }
 .box{ box-sizing:border-box }
@@ -41,7 +50,6 @@ html, body
 
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
-.yon{ width:5%; height:48px }
 
 .trn{ background-color:rgb(223,223,223) } /* turn */
 .bnc{ background-color:rgb(207,207,207) } /* bench */
@@ -53,7 +61,7 @@ html, body
 .lbl{ background-color:rgb(95,31,159) } /* light blue */
 .dbl{ background-color:rgb(79,15,143) } /* dark blue */
 
-/*..............................................................................
+/*==============================================================================
 */
 .nnnn{ border:0 }
 
@@ -85,7 +93,7 @@ html, body
 .nsnn{ border-width:0 1px 0 0 }
 .nnsn{ border-width:0 0 1px 0 }
 
-/*..............................................................................
+/*//////////////////////////////////////////////////////////////////////////////
 */
 #selection{ border:4px solid rgba(255,255,255,0.5); animation:ripple 0.25s }
 
@@ -96,7 +104,7 @@ html, body
   100%{ border-width:2px }
 }
 
-/*..............................................................................
+/*//////////////////////////////////////////////////////////////////////////////
 */
 .sh0{ width:48px; height:48px; animation:shineA 0.75s infinite }
 .sh1{ width:38px; height:38px; animation:shineB 0.75s infinite }
@@ -111,7 +119,6 @@ html, body
   99% { border-color:rgba(255,255,255,0.9); border-width:6px }
   100%{ border-color:rgba(255,255,255,0.6); border-width:2px }
 }
-
 @keyframes shineB
 {
   6%  { border-color:rgba(255,255,255,0.3); border-width:2px }
@@ -120,7 +127,6 @@ html, body
   96% { border-color:rgba(255,255,255,0.9); border-width:6px }
   100%{ border-color:rgba(255,255,255,0.6); border-width:2px }
 }
-
 @keyframes shineC
 {
   3%  { border-color:rgba(255,255,255,0.3); border-width:2px }
@@ -129,7 +135,6 @@ html, body
   93% { border-color:rgba(255,255,255,0.9); border-width:6px }
   100%{ border-color:rgba(255,255,255,0.6); border-width:2px }
 }
-
 @keyframes shineD
 {
   0%  { border-color:rgba(255,255,255,0.3); border-width:2px }
@@ -138,3 +143,14 @@ html, body
   90% { border-color:rgba(255,255,255,0.9); border-width:6px }
   100%{ border-color:rgba(255,255,255,0.6); border-width:2px }
 }
+
+/*==============================================================================
+*/
+.zon
+{
+  border:1px dashed rgb(255,255,255);
+  animation:roll 4s infinite;
+  animation-timing-function:linear;
+}
+
+@keyframes roll{ 100%{ transform:rotate(360deg) } }
