--- a/style.css
+++ b/style.css
@@ -13,17 +13,36 @@ html, body
 
 /*//////////////////////////////////////////////////////////////////////////////
 */
-#arena{ width:960px; height:692px; background-color:rgb(255,255,255) }
 #clock{ width:240px; height:48px }
 #ball{ background-color:rgba(127,127,127,0.75) }
 #console{ width:50%; height:48px }
 #reset{ width:25%; height:48px }
+#yes{ border-radius:24px 0 0 24px; padding-left:4px; border-right-width:0 }
+#no{ border-radius:0 24px 24px 0; padding-right:4px; border-left-width:0 }
+#arena
+{
+  width:960px;
+  height:692px;
+  background-color:rgb(255,255,255);
+  border-radius: 0 0 24px 24px;
+}
 #center
 {
   transform:translate(461px,268px);
   border-style:dashed;
   width:38px;
   height:38px;
+}
+
+/*//////////////////////////////////////////////////////////////////////////////
+*/
+#selection{ border:4px solid rgba(255,255,255,0.5); animation:ripple 0.25s }
+
+@keyframes ripple
+{
+  0%  { border-width:4px }
+  50% { border-width:8px }
+  100%{ border-width:2px }
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
@@ -38,11 +57,12 @@ html, body
 .abs{ position:absolute }
 .flt{ float:left }
 
-.rn1{ border-radius:5px; font-size:15px; color:rgb(207,207,207) }
+.rn1{ border-radius:24px; font-size:16px; color:rgb(223,223,223) }
 .rn2{ border-radius:50% }
 
 .bd1{ border:1px solid rgb(255,255,255) }
 .bd2{ border:2px solid rgb(255,255,255) }
+.bd3{ border:3px solid rgb(255,255,255) }
 
 .dsp{ background-color:rgb(63,63,63) }
 .btn{ background-color:rgb(127,127,127) }
@@ -92,17 +112,6 @@ html, body
 .snnn{ border-width:1px 0 0 0 }
 .nsnn{ border-width:0 1px 0 0 }
 .nnsn{ border-width:0 0 1px 0 }
-
-/*//////////////////////////////////////////////////////////////////////////////
-*/
-#selection{ border:4px solid rgba(255,255,255,0.5); animation:ripple 0.25s }
-
-@keyframes ripple
-{
-  0%  { border-width:4px }
-  50% { border-width:8px }
-  100%{ border-width:2px }
-}
 
 /*//////////////////////////////////////////////////////////////////////////////
 */
