--- a/style.css
+++ b/style.css
@@ -16,19 +16,19 @@ html, body
 #clock{ width:240px; height:48px }
 #ball{ background-color:rgba(127,127,127,0.75) }
 #console{ width:50%; height:48px }
-#reset{ width:15%; height:48px; border-width:2px 0 2px 0 }
+#reset{ width:15%; height:48px; border-width:1px 0 1px 0 }
 #yes{ border-radius:24px 0 0 24px; padding-left:4px; border-right-width:0 }
 #no{ border-radius:0 24px 24px 0; padding-right:4px; border-left-width:0 }
 #arena
 {
   width:960px;
-  height:692px;
+  height:692px; /* true height 576px */
   background-color:rgb(255,255,255);
   border-radius: 0 0 24px 24px;
 }
 #center
 {
-  transform:translate(461px,268px);
+  transform:translate(461px,269px); /* true center 480px, 288px */
   border-style:dashed;
   width:38px;
   height:38px;
@@ -50,15 +50,15 @@ html, body
 .cll{ color:rgba(255,255,255,0.25); font-family:sans-serif; font-size:14px }
 .cnt{ display:flex; align-items:center; justify-content:center }
 .gol{ width:40px; height:40px; background-color:rgba(255,255,255,0.25) }
-.yon{ width:5%; height:48px }
+.yon{ width:5%; height:48px; font-size:24px }
 
-.tra{ transition: all 0.25s ease-in-out }
+.tra{ transition:all 0.25s ease-in-out }
 .fml{ font-family:sans-serif }
 .box{ box-sizing:border-box }
 .abs{ position:absolute }
 .flt{ float:left }
 
-.rn1{ border-radius:24px; font-size:16px }
+.rn1{ border-radius:24px }
 .rn2{ border-radius:50% }
 
 .bd1{ border:1px solid rgb(255,255,255) }
@@ -68,16 +68,17 @@ html, body
 .dsp{ background-color:rgb(63,63,63); color:rgb(207,207,207) }
 
 .btn{ background-color:rgb(127,127,127); color:rgb(207,207,207) }
-.gre{ background-color:rgb(95,143,0); color:rgb(255,255,255) }
 .red{ background-color:rgb(191,0,31); color:rgb(255,255,255) }
+.gre{ background-color:rgb(95,143,0); color:rgb(255,255,255) }
+.blu{ background-color:rgb(79,15,143); color:rgb(255,255,255) }
 .btn:hover{ background-color:rgb(143,143,143); cursor:pointer }
-.gre:hover{ background-color:rgb(111,159,15); cursor:pointer }
 .red:hover{ background-color:rgb(207,15,47); cursor:pointer }
+.gre:hover{ background-color:rgb(111,159,15); cursor:pointer }
+.blu:hover{ background-color:rgb(95,31,159); cursor:pointer }
 
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
 
-.trn{ background-color:rgb(223,223,223) } /* turn */
 .bnc{ background-color:rgb(207,207,207) } /* bench */
 
 .lrd{ background-color:rgb(207,15,47) } /* light red */
@@ -121,6 +122,17 @@ html, body
 
 /*//////////////////////////////////////////////////////////////////////////////
 */
+.zon
+{
+  border:1px dashed rgb(255,255,255);
+  animation:roll 4s infinite;
+  animation-timing-function:linear;
+}
+
+@keyframes roll{ 100%{ transform:rotate(360deg) } }
+
+/*==============================================================================
+*/
 .sh0{ width:48px; height:48px; animation:shineA 0.75s infinite }
 .sh1{ width:38px; height:38px; animation:shineB 0.75s infinite }
 .sh2{ width:28px; height:28px; animation:shineC 0.75s infinite }
@@ -158,14 +170,3 @@ html, body
   90% { border-color:rgba(255,255,255,0.9); border-width:6px }
   100%{ border-color:rgba(255,255,255,0.6); border-width:2px }
 }
-
-/*==============================================================================
-*/
-.zon
-{
-  border:1px dashed rgb(255,255,255);
-  animation:roll 4s infinite;
-  animation-timing-function:linear;
-}
-
-@keyframes roll{ 100%{ transform:rotate(360deg) } }
