--- a/style.css
+++ b/style.css
@@ -36,13 +36,18 @@ html, body
 
 /*//////////////////////////////////////////////////////////////////////////////
 */
-#selection{ border:4px solid rgba(255,255,255,0.5); animation:ripple 0.25s }
+#selection
+{
+  display:none;
+  border:8px solid rgba(255,255,255,0.5);
+  animation:ripple 0.25s ease-in-out;
+}
 
 @keyframes ripple
 {
-  0%  { border-width:4px }
-  50% { border-width:8px }
-  100%{ border-width:2px }
+  0%  { border-width:8px }
+  50% { border-width:12px }
+  100%{ border-width:10px }
 }
 
 /*//////////////////////////////////////////////////////////////////////////////
@@ -124,6 +129,7 @@ html, body
 */
 .zon
 {
+  display:none;
   border:1px dashed rgb(255,255,255);
   animation:roll 4s infinite;
   animation-timing-function:linear;
