--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ html, body
 #ball{ background-color:rgba(127,127,127,0.75) }
 #console{ width:50%; height:48px }
 #reset{ width:15%; height:48px; border-width:1px 0 1px 0 }
-#yes{ border-radius:24px 0 0 24px; padding-left:4px; border-right-width:0 }
-#no{ border-radius:0 24px 24px 0; padding-right:4px; border-left-width:0 }
+#yes{ border-radius:0 24px 24px 0; padding-right:6px; border-left-width:0 }
+#no{ border-radius:24px 0 0 24px; padding-left:6px; border-right-width:0 }
 #arena
 {
   width:960px;
