--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html, body
   display:none;
   cursor:pointer;
   border:8px solid rgba(255,255,255,0.5);
-  animation:ripple 0.25s ease-in-out;
+  animation:ripple 0.25s ease;
 }
 #selection:hover
 {
@@ -64,10 +64,10 @@ html, body
 .fml{ font-family:sans-serif }
 .box{ box-sizing:border-box }
 .abs{ position:absolute }
+.pnt{ cursor:pointer }
 .flt{ float:left }
 
-.tr1{ transition:all 0.25s ease-in-out }
-.tr2{ transition:background-color 0.25s ease-in-out, border 0.1s ease-in-out }
+.tra{ transition:all 0.25s ease }
 
 .rn1{ border-radius:24px }
 .rn2{ border-radius:50% }
@@ -87,11 +87,12 @@ html, body
 .gre:hover{ background-color:rgb(111,159,15); cursor:pointer }
 .blu:hover{ background-color:rgb(95,31,159); cursor:pointer }
 
-.bal{ background-color:rgba(47,47,47,0.75); cursor:pointer }
-.dng{ background-color:rgba(175,0,0,0.5); cursor:pointer }
+.bal{ background-color:rgba(47,47,47,0.75) }
+.dng{ background-color:rgba(175,0,0,0.5) }
 .bal:hover{ background-color:rgba(95,95,95,0.75) }
 .dng:hover{ background-color:rgba(223,47,47,0.5) }
 
+.msk{ width:46px; height:46px }
 .sqr{ width:48px; height:48px }
 .spc{ width:100%; height:10px }
 
@@ -138,8 +139,9 @@ html, body
 
 /*==============================================================================
 */
-.bld{ border:3px dashed rgb(255,207,0); box-shadow:0 0 4px 2px rgb(255,191,0) }
-.thi{ border:2px dashed rgba(255,207,0,0.75) }
+.thi{ border:3px dotted rgba(255,207,0,0.75) }
+.bld{ border:5px dotted rgb(255,207,0) }
+.bld:hover{ box-shadow:0 0 8px 4px rgb(255,191,0); border-color:rgb(255,255,0) }
 .zon{ display:none; animation:z 4s infinite; animation-timing-function:linear }
 
 @keyframes z{ 100%{ transform:rotate(360deg) } }
