ENH: small one + read commentary
When zoomed in enough to make scroll bars appear…

Firefox: breaks horizontally and vertically
Chrome: breaks horizontally
Safari: doesn’t break!

obs: This might be pinned as an issue at some point after this new
iteration gets merged to the branch.

ohs: This might be just a CSS problem.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 html, body
 {
   margin:0;
-  width:100%;
   height:100%;
   background-color:rgb(48,48,48);
   -webkit-user-select:none;
@@ -11,6 +10,7 @@ html, body
   cursor:default;
   display:flex;
   align-items:center;
+  justify-content:center;
   flex-direction:column;
 }
 
